feat(api,web) 👌 refactor contract
