# apps/api/src/features/frames/frames.controller.ts
@@ -4,7 +4,7 @@ import { ApiOperation, ApiCreatedResponse, ApiOkResponse } from '@nestjs/swagger
 import { FramesService } from './frames.service';
 import { FrameDto } from './frame.dto';
 
-@Controller('games/:id/frames')
+@Controller('games/:gameId/frames')
 export class FramesController {
   constructor(private readonly framesService: FramesService) {}
 
@@ -15,10 +15,10 @@ export class FramesController {
     return this.framesService.create(createFrameDto);
   }
 
-  @Put(':id')
+  @Put(':frameId')
   @ApiOperation({ summary: 'Update a frame' })
   @ApiOkResponse({ description: 'Frame has been successfully updated.'}) 
-  async update(@Param('id') id: string, @Body() updateFrameDto: FrameDto): Promise<FrameDto> {
+  async update(@Param('frameId') id: string, @Body() updateFrameDto: FrameDto): Promise<FrameDto> {
     return this.framesService.update(id, updateFrameDto);
   }
 }
